k8s/03_deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  namespace: glamai-ns

spec:
  replicas: 2
  selector:
    matchLabels:
      app: cms-backend
  template:
    metadata:
      labels:
        app: cms-backend
    spec:
      containers:
      - name: cms-backend-container
        image: sarojdockerworkspace/glamai-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
